fixed dashboard nps visibility

--- a/sass/backend/admin.scss
+++ b/sass/backend/admin.scss
@@ -22,7 +22,7 @@ $placeholder_color: #9ca3af;
 		}
 	}
 }
-#toplevel_page_sureforms_menu,
+.toplevel_page_sureforms_menu,
 .sureforms_page_sureforms_form_settings,
 .sureforms_page_sureforms_entries,
 .sureforms_page_sureforms_form_entries {
